# FireRendering

./: .gitmodules  CMakeLists.txt  README.md
FireRendering/: CMakeCache.txt  CMakeLists.txt
FireRendering/Libs/: CMakeLists.txt
FireRendering/Libs/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp  imstb_truetype.h
FireRendering/Resources/Shaders/: bezierPatch.frag  bezierPatch.tesc  bezierPatch.tese  billboard.frag  billboard.vert  defaultColor.frag  defaultPhong.frag  defaultPhong.vert
FireRendering/Resources/Shaders/Fire/: ember.frag  fire.frag  smoke.frag
FireRendering/Source/Core/: App.cpp  App.h  Globals.h  Window.cpp
FireRendering/Source/Engine/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  VertexArray.cpp  VertexBuffer.h  VertexLayout.h
FireRendering/Source/Managers/: ShaderManager.cpp  ShaderManager.h
FireRendering/Source/Objects/: Arrow.cpp  Arrow.h  BezierCube.cpp  BezierCube.h  Cube.cpp  Cube.h  Line.cpp  Line.h  Objects.h  Plane.cpp  Plane.h  Quad.cpp  Quad.h  Shape.cpp  Shape.h  Spring.cpp  Spring.h  Trace.cpp  Trace.h
FireRendering/Source/Objects/Components/: RotationComponent.cpp  RotationComponent.h  ScalingComponent.cpp  ScalingComponent.h  Transformations.h  TranslationComponent.cpp  TranslationComponent.h
FireRendering/Source/Particles/: EmberParticleSystem.cpp  EmberParticleSystem.h  FlameParticleSystem.cpp  FlameParticleSystem.h  IParticleSystem.cpp  IParticleSystem.h  Particle.h  ParticleSystem.cpp  ParticleSystem.h  SmokeParticleSystem.cpp  SmokeParticleSystem.h
FireRendering/Source/Scenes/: FireScene.cpp  FireScene.h  IScene.h
FireRendering/Source/Texture/: Texture.cpp  Texture.h
FireRendering/Source/Utils/: ColorPalette.cpp  ColorPalette.h  Init.cpp  Init.h
